Independent Publisher 2: Minor fixes to Gutenberg implementation, including: * Update selectors for editor colour palette styles. * Update comment widget styles to better match the comments in the theme. * Correct the caption styles on the front-end and in the editor. * Fix an alignment issue with wide video players in RTL styles. * Fix the file link colour in the editor.

--- a/independent-publisher-2/css/editor-blocks.css
+++ b/independent-publisher-2/css/editor-blocks.css
@@ -47,6 +47,7 @@ Description: Used to style Gutenberg Blocks in the editor.
 	color: #333332;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
 	font-size: 32px;
+	font-weight: bold;
 }
 
 @media screen and (min-width: 32.375em) {
@@ -58,62 +59,81 @@ Description: Used to style Gutenberg Blocks in the editor.
 /* Headings */
 
 .edit-post-visual-editor h1,
+.wp-block-freeform.block-library-rich-text__tinymce h1,
 .edit-post-visual-editor h2,
+.wp-block-freeform.block-library-rich-text__tinymce h2,
 .edit-post-visual-editor h3,
+.wp-block-freeform.block-library-rich-text__tinymce h3,
 .edit-post-visual-editor h4,
+.wp-block-freeform.block-library-rich-text__tinymce h4,
 .edit-post-visual-editor h5,
-.edit-post-visual-editor h6 {
+.wp-block-freeform.block-library-rich-text__tinymce h5,
+.edit-post-visual-editor h6,
+.wp-block-freeform.block-library-rich-text__tinymce h6 {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
 	line-height: 1.1;
 	color: #333332;
+	font-weight: bold;
 }
 
-.edit-post-visual-editor h1 {
+.edit-post-visual-editor h1,
+.wp-block-freeform.block-library-rich-text__tinymce h1 {
 	font-size: 32px;
 }
 
-.edit-post-visual-editor h2 {
+.edit-post-visual-editor h2,
+.wp-block-freeform.block-library-rich-text__tinymce h2 {
 	font-size: 24px;
 }
 
-.edit-post-visual-editor h3 {
+.edit-post-visual-editor h3,
+.wp-block-freeform.block-library-rich-text__tinymce h3 {
 	font-size: 19px;
 }
 
-.edit-post-visual-editor h4 {
+.edit-post-visual-editor h4,
+.wp-block-freeform.block-library-rich-text__tinymce h4 {
 	font-size: 15px;
 }
 
-.edit-post-visual-editor h5 {
+.edit-post-visual-editor h5,
+.wp-block-freeform.block-library-rich-text__tinymce h5 {
 	font-size: 14px;
 }
 
-.edit-post-visual-editor h6 {
+.edit-post-visual-editor h6,
+.wp-block-freeform.block-library-rich-text__tinymce h6 {
 	font-size: 13px;
 }
 
 @media screen and (min-width: 32.375em) {
-	.edit-post-visual-editor h1 {
+	.edit-post-visual-editor h1,
+	.wp-block-freeform.block-library-rich-text__tinymce h1 {
 		font-size: 47px;
 	}
 
-	.edit-post-visual-editor h2 {
+	.edit-post-visual-editor h2,
+	.wp-block-freeform.block-library-rich-text__tinymce h2 {
 		font-size: 32px;
 	}
 
-	.edit-post-visual-editor h3 {
+	.edit-post-visual-editor h3,
+	.wp-block-freeform.block-library-rich-text__tinymce h3 {
 		font-size: 24px;
 	}
 
-	.edit-post-visual-editor h4 {
+	.edit-post-visual-editor h4,
+	.wp-block-freeform.block-library-rich-text__tinymce h4 {
 		font-size: 19px;
 	}
 
-	.edit-post-visual-editor h5 {
+	.edit-post-visual-editor h5,
+	.wp-block-freeform.block-library-rich-text__tinymce h5 {
 		font-size: 15px;
 	}
 
-	.edit-post-visual-editor h6 {
+	.edit-post-visual-editor h6,
+	.wp-block-freeform.block-library-rich-text__tinymce h6 {
 		font-size: 14px;
 	}
 }
@@ -241,6 +261,16 @@ Description: Used to style Gutenberg Blocks in the editor.
 	padding: 1.75em;
 }
 
+/* Captions */
+
+[class^="wp-block-"] figcaption {
+	font-size: 14.25px;
+	font-weight: 400;
+	font-style: italic;
+	color: #939393;
+
+}
+
 /*--------------------------------------------------------------
 3.0 Blocks - Common Blocks
 --------------------------------------------------------------*/
@@ -311,6 +341,10 @@ p.has-drop-cap:not(:focus)::first-letter {
 }
 
 /* File */
+
+.wp-block-file__textlink {
+	color: #0087be;
+}
 
 .wp-block-file .wp-block-file__button {
 	background: #0087be;
@@ -539,4 +573,27 @@ p.has-drop-cap:not(:focus)::first-letter {
 [data-align="center"] .wp-block-latest-posts ul,
 [data-align="center"] .wp-block-archives ul {
 	list-style-position: inside;
+}
+
+/* Latest Comments */
+
+.wp-block-latest-comments {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.wp-block-latest-comments__comment,
+.wp-block-latest-comments__comment-date,
+.wp-block-latest-comments__comment-excerpt p {
+	font-size: 17px;
+}
+
+.wp-block-latest-comments__comment-meta a {
+	color: #000;
+	font-weight: bold;
+}
+
+.wp-block-latest-comments__comment-date {
+	color: #b3b3b1;
+	font-size: 14px;
 }
